# musicd

./: CMakeLists.txt  README.md  musicd.service  schema.sql
include/musicd/: db.hpp  log.hpp  net.hpp  threadpool.hpp  transcode.hpp  utility.hpp
pb/: track.proto
src/: musicd.cpp  musicd_db.cpp  musicd_log.cpp  musicd_net.cpp  musicd_transcode.cpp  musicd_utility.cpp  transcode_test.cpp
test/: transcode.cpp
